switch from DatatypeConverter to Java11 ready Base64